--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Sientete libre de copiar
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://deepbluejacket.github.io/CdeCodigo/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
