--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: C de codigo
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Sientete libre de copiar
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/CdeCodigo" # the subpath of your site, e.g. /blog
 url: "https://deepbluejacket.github.io/CdeCodigo/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
